Moved example to src

--- a/output.html
+++ b/output.html
@@ -236,9 +236,9 @@
                 <img class="recipe-image" src="https://marketplace.canva.com/EAFNsV8XtFc/1/0/1067w/canva-white-modern-recipe-card-g0ij-n11PwM.jpg">
                 <div class="recipe-info-section">
                     <div class="icons-container">
-                        <img class="icon" src="src/icons/stopwatch.png">
+                        <img class="icon" src="C:\Users\rasko\Desktop\JSD\JSD-Tim7\src\icons\stopwatch.png">
                         <span class="icon-text">0:30</span>
-                        <img class="icon" style="margin-left: 15px;" src="src/icons/calories-calculator.png">
+                        <img class="icon" style="margin-left: 15px;" src="C:\Users\rasko\Desktop\JSD\JSD-Tim7\src\icons\calories-calculator.png">
                         <span class="icon-text">155.0kcal</span>
                     </div>
                     <div class="description-text">
